#:schema https://json.schemastore.org/any.json
[tool.poetry]
name = "ha-template-device-tracker"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.4"
isort = "^5.13.2"
black = "^24.10.0"

[tool.poetry.group.test.dependencies]
mypy-dev = "1.14.0a7"

[tool.poetry.group.homeassistant.dependencies]
homeassistant = "2024.12.5"
colorlog = "^6.8.2"
numpy = "*"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
known_first_party = [
    "custom_components.device_tracker_template",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "T20", "Q"]

[tool.mypy]
python_version = "3.12"
follow_untyped_imports = true
local_partial_types = true
strict_equality = true
strict_bytes = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code",
    "redundant-self",
    "truthy-iterable",
]
extra_checks = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
