[project]
name = "ha-template-device-tracker"
version = "0.1.2"
requires-python = "~=3.14.2"

[dependency-groups]
test = [
    "pytest-homeassistant-custom-component==0.13.344",
    "mypy==1.20.2",
]
homeassistant = [
    "homeassistant==2026.7.0",
    "colorlog>=6.9.0",
]
lint = [
    "ruff==0.15.8",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "ANN401", # any-type
    "S101",   # assert
    "TC002",  # typing-only-third-party-import
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.mypy]
python_version = "3.14"
follow_untyped_imports = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
